tests/bad/structs/5.lat
class A {
    int z;
    int z;
}

int main() {
    return 0;
}